--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Sat shri akal, namaskar, aadab, salut, hello, ni-hao, konichiwa ...</h2>
+    <h2>Hello World!!</h2>
 </body>
 </html>
